name:                haskell-toy-robot
version:             0.1.0.0
homepage:            https://github.com/tomcjohn/haskell-toy-robot
author:              Tom John
maintainer:          tomcjohn@gmail.com
copyright:           private
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Command
                     , Direction
                     , Position
                     , Robot
                     , Table
  build-depends:       base >= 4.8 && < 5
                     , mtl
                     , split
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

executable haskell-toy-robot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
--  other-modules:       Emailer
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , transformers
                     , haskell-toy-robot
  default-language:    Haskell2010

test-suite haskell-toy-robot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , haskell-toy-robot
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  other-modules:       RobotSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomcjohn/haskell-toy-robot
